--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<meta property="og:image" content="http://marital19.com/og.jpg" />
 	<meta property="og:url" content="http://marital19.com/main/index.html" />
 	<link rel="canonical" href="http://marital19.com" />
-	<link rel="stylesheet" href="./Libs/_style/rankup_style.css" />
+	<link rel="stylesheet" href="./Libs/style/rankup_style.css" />
 	<link rel="stylesheet" href="./design/skin/skin.css?v=1" />
-	<link rel="stylesheet" href="./Libs/_style/rankup_shop.css" />
+	<link rel="stylesheet" href="./Libs/style/rankup_shop.css" />
 	<link rel="stylesheet" href="./design/site/site.css" />
 	<link rel="stylesheet" href="./design/skin/css_menu.css?v=1" />
 	<link rel="stylesheet" href="./design/top/gnb.css?v=1" />
@@ -26,14 +26,14 @@
 	<script>
 		var domain = "http://" + document.domain + "/"
 	</script>
-	<script src="./Libs/_js/require.js"></script>
-	<script src="./Libs/_js/prototype.js?v=1"></script>
-	<script src="./Libs/_js/jquery.min.js"></script>
+	<script src="./Libs/js/require.js"></script>
+	<script src="./Libs/js/prototype.js?v=1"></script>
+	<script src="./Libs/js/jquery.min.js"></script>
 	<script>
 		var $J = $j = jQuery.noConflict();
 	</script>
-	<script src="./Libs/_js/form.js"></script>
-	<script src="./Libs/_js/common.js"></script>
+	<script src="./Libs/js/form.js"></script>
+	<script src="./Libs/js/common.js"></script>
 </head>
 
 <body>
@@ -203,7 +203,7 @@
 				});
 			});
 		</script><!-- RANKUP_POPUP TEMPLATE_V2 -->
-		<script src="../Libs/_js/rankup_popup.js" type="text/javascript"></script>
+		<script src="../Libs/js/rankup_popup.js" type="text/javascript"></script>
 		<div id="popupTemplate" style="display:none;font-size:12px;">
 			<iframe frameborder="0" src="about:blank" style="position:absolute;width:1px;height:1px"></iframe>
 			<table align="center" bgcolor="#cacaca" border="0" cellpadding="1" cellspacing="1"
@@ -322,7 +322,7 @@
 								-khtml-opacity: 0.10;
 								/* Safari 1.x */
 
-								background: url(/Libs/_js/jssor/img/b16.png) no-repeat;
+								background: url(/Libs/js/jssor/img/b16.png) no-repeat;
 
 							}
 
@@ -369,7 +369,7 @@
 								-khtml-opacity: 0.10;
 								/* Safari 1.x */
 
-								background: url(/Libs/_js/jssor/img/a15.png) center center no-repeat;
+								background: url(/Libs/js/jssor/img/a15.png) center center no-repeat;
 
 								position: absolute;
 
@@ -625,14 +625,14 @@
 							</style>
 							<div class="banner-wrap first" id="banner_3">
 								<div class="loading">
-									<img src="/Libs/_js/jssor/img/loader-bert.gif">
+									<img src="/Libs/js/jssor/img/loader-bert.gif">
 									</img></div>
 								<div style="position: absolute; top: 0px; left: 0px;" u="loading">
 									<div style="filter: alpha(opacity=70); opacity:0.7; position: absolute; display: block;
 
             background-color: #000; top: 0px; left: 0px;width: 100%;height:100%;">
 									</div>
-									<div style="position: absolute; display: block; background: url(/Libs/_js/jssor/img/loading.gif) no-repeat center center;
+									<div style="position: absolute; display: block; background: url(/Libs/js/jssor/img/loading.gif) no-repeat center center;
 
             top: 0px; left: 0px;width: 100%;height:100%;">
 									</div>
