--- a/store/view2.html
+++ b/store/view2.html
@@ -14,9 +14,9 @@
 	<meta property="og:image" content="http://marital19.com/og.jpg" />
 	<meta property="og:url" content="http://marital19.com/store/view.html?pid=25&amp;no=124" />
 	<link rel="canonical" href="http://marital19.com/store/view.html?pid=25&amp;no=124" />
-	<link rel="stylesheet" href="/Libs/_style/rankup_style.css">
+	<link rel="stylesheet" href="/Libs/style/rankup_style.css">
 	<link rel="stylesheet" href="/design/skin/skin.css?v=1" />
-	<link rel="stylesheet" href="/Libs/_style/rankup_shop.css" />
+	<link rel="stylesheet" href="/Libs/style/rankup_shop.css" />
 	<link rel="stylesheet" href="/design/site/site.css" />
 	<link rel="stylesheet" href="/design/skin/css_menu.css?v=1" />
 	<link rel="stylesheet" href="/design/top/gnb.css?v=1" />
@@ -29,14 +29,14 @@
 	<script>
 		var domain = "http://" + document.domain + "/"
 	</script>
-	<script src="/Libs/_js/require.js"></script>
-	<script src="/Libs/_js/prototype.js?v=1"></script>
-	<script src="/Libs/_js/jquery.min.js"></script>
+	<script src="/Libs/js/require.js"></script>
+	<script src="/Libs/js/prototype.js?v=1"></script>
+	<script src="/Libs/js/jquery.min.js"></script>
 	<script>
 		var $J = $j = jQuery.noConflict();
 	</script>
-	<script src="/Libs/_js/form.js"></script>
-	<script src="/Libs/_js/common.js"></script>
+	<script src="/Libs/js/form.js"></script>
+	<script src="/Libs/js/common.js"></script>
 </head>
 
 <body>
@@ -271,7 +271,7 @@
 							<div class="subtitle">
 								<img alt="" class="bullet_img" src="../design/skin/img/bullet_s_tit.png"> 매장 인테리어
 							</div>
-							<script src="/Libs/_js/jssor/jssor.slider-22.2.16.min.js"></script>
+							<script src="/Libs/js/jssor/jssor.slider-22.2.16.min.js"></script>
 							<script src="store_slider.js?v=1767256080"></script>
 							<div class="inte_fsh">
 								<div id="store_frame"
@@ -280,7 +280,7 @@
 									<div data-u="loading"
 										style="position:absolute;top:0px;left:0px;background-color:rgba(0,0,0,0.7);">
 										<div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
-										<div style="position:absolute;display:block;background:url('/Libs/_js/jssor/img/loader.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
+										<div style="position:absolute;display:block;background:url('/Libs/js/jssor/img/loader.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
 									</div>
 									<div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1200px;height:600px;overflow:hidden;">
 										<div><img data-u="image" src="/PEG/store/124/17349197837060.jpg"></div>
