--- a/store/view.html
+++ b/store/view.html
@@ -17,18 +17,18 @@
 <meta content="http://marital19.com/og.jpg" property="og:image"/>
 <meta content="http://marital19.com/store/view.html?pid=25&amp;no=124" property="og:url"/>
 <link href="http://marital19.com/store/view.html?pid=25&amp;no=124" rel="canonical"/>
-<link href="/Libs/_style/rankup_style.css" rel="stylesheet" type="text/css">
+<link href="/Libs/style/rankup_style.css" rel="stylesheet" type="text/css">
 <link href="/design/skin/skin.css?v=1" rel="stylesheet" type="text/css"/>
-<link href="/Libs/_style/rankup_shop.css" rel="stylesheet" type="text/css"/>
+<link href="/Libs/style/rankup_shop.css" rel="stylesheet" type="text/css"/>
 <link href="/design/site/site.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript"> window.top.document.title = document.title </script>
 <script type="text/javascript">var domain = "http://"+document.domain+"/"</script>
-<script src="/Libs/_js/require.js" type="text/javascript"></script>
-<script src="/Libs/_js/prototype.js?v=1" type="text/javascript"></script>
-<script src="/Libs/_js/jquery.min.js" type="text/javascript"></script>
+<script src="/Libs/js/require.js" type="text/javascript"></script>
+<script src="/Libs/js/prototype.js?v=1" type="text/javascript"></script>
+<script src="/Libs/js/jquery.min.js" type="text/javascript"></script>
 <script type="text/javascript">var $J=$j=jQuery.noConflict();</script>
-<script src="/Libs/_js/form.js" type="text/javascript"></script>
-<script src="/Libs/_js/common.js" type="text/javascript"></script>
+<script src="/Libs/js/form.js" type="text/javascript"></script>
+<script src="/Libs/js/common.js" type="text/javascript"></script>
 </link></head>
 <body>
 <div id="body_wrap">
@@ -151,7 +151,7 @@
 <img alt="" class="bullet_img" src="../design/skin/img/bullet_s_tit.png"> 매장 인테리어
 
 	</img></div>
-<script src="/Libs/_js/jssor/jssor.slider-22.2.16.min.js" type="text/javascript"></script>
+<script src="/Libs/js/jssor/jssor.slider-22.2.16.min.js" type="text/javascript"></script>
 <script src="store_slider.js?v=1767258591" type="text/javascript"></script>
 <style type="text/css">
 
@@ -165,7 +165,7 @@
 <!-- Loading Screen -->
 <div data-u="loading" style="position:absolute;top:0px;left:0px;background-color:rgba(0,0,0,0.7);">
 <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
-<div style="position:absolute;display:block;background:url('/Libs/_js/jssor/img/loader.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
+<div style="position:absolute;display:block;background:url('/Libs/js/jssor/img/loader.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
 </div>
 <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1200px;height:600px;overflow:hidden;">
 <div><img data-u="image" src="/PEG/store/124/17349197837060.jpg"/></div> </div>
