--- a/index.html
+++ b/index.html
@@ -1977,9 +1977,7 @@
 				<div class="f_left_wrap">
 					<ul class="copyright">
 						<li>
-							<a href="#none" target="_self"><img
-									src="http://marital19.com/RAD/PEG/logo_16964812760575.png"
-									alt="마리텔 로고" width="115" height="65" /></a>
+							<a href="#none" target="_self"><img src="./RAD/PEG/logo_16964812760575.png" alt="마리텔 로고" width="115" height="65" /></a>
 						</li>
 						<li>
 							<p style="color:#ddd;">(주)좋은친구</p>
