--- a/index.html
+++ b/index.html
@@ -1736,15 +1736,12 @@
 								}
 							</style>
 							<div class="banner-wrap first" data-position="main11" data-type="fix" id="banner_25">
-								<div class="banner_image_0"><img src="/wysiwyg/PEG/se2_16946737383591.png"
+								<div class="banner_image_0"><img src="./wysiwyg/PEG/se2_16946737383591.png"
 										style="border-color: rgb(0, 0, 0);" usemap="#W_1641864875" />
 									<map id="W_1641864875" name="W_1641864875">
-										<area coords="662,53,784,76" href="#none"
-											onfocus="this.blur();" shape="rect" />
-										<area coords="855,53,940,76" href="#none"
-											onfocus="this.blur();" shape="rect" />
-										<area coords="1010,53,1099,76" href="#none"
-											onfocus="this.blur();" shape="rect" />
+										<area coords="662,53,784,76" href="#none" onfocus="this.blur();" shape="rect" />
+										<area coords="855,53,940,76" href="#none" onfocus="this.blur();" shape="rect" />
+										<area coords="1010,53,1099,76" href="#none" onfocus="this.blur();" shape="rect" />
 									</map>
 								</div>
 							</div>
