--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 									<li class="" hover="" onclick="menu_handler(48)"><a class="hidden"
 											href="#none">브랜드소개</a>브랜드소개</li>
 									<li class="" hover="" onclick="menu_handler(12)"><a class="hidden"
-											href="#none">오시는길</a>오시는길</li>
+											href="./main/page.html">오시는길</a>오시는길</li>
 								</ul>
 								<div class="clear"></div>
 							</div>
@@ -1532,7 +1532,7 @@
 						<li><a href="#none">회사연혁</a></li>
 						<li><a href="#none">회사조직도</a></li>
 						<li><a href="#none">브랜드소개</a></li>
-						<li><a href="#none">오시는길</a></li>
+						<li><a href="./main/page.html">오시는길</a></li>
 					</ul>
 					<ul class="footer_menu" style="width:180px">
 						<li class="menu_h"><a href="#none">무인성인용품 마리텔 소개</a></li>
