--- a/main/page.html
+++ b/main/page.html
@@ -51,7 +51,7 @@
 			</div><!-- top_box End -->
 			<div id="gnb_frame" style="text-align:center">
                 <div class="gnb_wrap">
-                    <script src="./design/skin/css_menu.js"></script>
+                    <script src="../design/skin/css_menu.js"></script>
                     <div id="css_gnb_frame">
                         <div class="mm_wrap">
                             <ul class="mm">
