--- a/main/page.html
+++ b/main/page.html
@@ -371,9 +371,7 @@
                             <td align="left" width="170">
                                 <table cellspacing='0' cellpadding='0' border='0'>
                                     <tr>
-                                        <td><a href='http://marital19.com/main/index.html' target='_self'><img
-                                                    src='http://marital19.com/RAD/PEG/logo_16964812760575.png'
-                                                    width='115px' height='65px' border='0'></a></td>
+                                        <td><a href='/' target='_self'><img src='../RAD/PEG/logo_16964812760575.png' width='115px' height='65px' border='0'></a></td>
                                     </tr>
                                 </table>
                         </li>
