--- a/index.html
+++ b/index.html
@@ -834,77 +834,20 @@
 						<div class="bn_wrap3_01">
 							<div class="bn3_1">
 								<style>
-									#main6 {
-
-										margin-top: 0px;
-
-										margin-right: 0px;
-
-										margin-bottom: 0px;
-
-										margin-left: 0px;
-
-									}
-
-
-
-									#main6>div.banner-wrap {
-
-										margin-top: 0px;
-
-									}
-
-
-
-									#main6>div.banner-wrap.first {
-
-										margin-top: 0px;
-
-									}
+									#main6 {margin:0 0 0 0;}
+									#main6>div.banner-wrap {margin-top:0px;}
+									#main6>div.banner-wrap.first {margin-top:0px;}
 								</style>
 								<div id="main6">
 									<!-- 고정형 배너 템플릿 -->
 									<style>
-										#banner_18.banner-wrap {
-
-											overflow: hidden;
-
-											clear: both;
-
-										}
-
-
-
-										#banner_18.banner-wrap {
-
-											width: 550px;
-
-											height: 250px;
-
-											text-align: right;
-
-										}
-
-
-
-										#banner_18.banner-wrap div {
-
-											margin-top: 0px;
-
-										}
-
-
-
-										.banner_image_0 {
-
-											margin: 0px !important;
-
-										}
+										#banner_18.banner-wrap {overflow:hidden;clear:both;}
+										#banner_18.banner-wrap {width:550px;height:250px;text-align:right;}
+										#banner_18.banner-wrap div{margin-top:0px;}
+										.banner_image_0{margin:0px !important;}
 									</style>
 									<div class="banner-wrap first" data-position="main6" data-type="fix" id="banner_18">
-										<div class="swiper-slide"><img alt="banner"
-												src="./PEG/banner/18/a1dc785e4db0be808bbd2d7530151196313f4af31697681730.png"
-												style="width:550px;height:250px" /></div>
+										<div class="banner_image_0"><img alt="banner" src="/PEG/banner/18/a1dc785e4db0be808bbd2d7530151196313f4af31697681730.png" style="width:550px;height:250px"></div>
 									</div><!-- 고정형 배너 템플릿 -->
 									<style>
 										#banner_30.banner-wrap {
@@ -944,11 +887,7 @@
 										}
 									</style>
 									<div class="banner-wrap" data-position="main6" data-type="fix" id="banner_30">
-										<div class="swiper-slide"><a
-												href="#none" target="_self"><img
-													alt="banner"
-													src="./PEG/banner/30/c2f0d2963078e7db7e572183eedcd488b987ab0c1745208879.jpg"
-													style="width:550px;height:360px" /></a></div>
+										<div class="banner_image_0"><a href="http://marital19.com/main/page?pid=102" target="_self"><img alt="banner" src="/PEG/banner/30/c2f0d2963078e7db7e572183eedcd488b987ab0c1745208879.jpg" style="width:550px;height:360px"></a></div>
 									</div>
 								</div>
 							</div>
@@ -1024,10 +963,7 @@
 										}
 									</style>
 									<div class="banner-wrap first" data-position="main7" data-type="fix" id="banner_19">
-										<div class="swiper-slide"><a href="#none" target="_self"><img
-													alt="banner"
-													src="./PEG/banner/19/037d971094900437981483152c1e41f124e0ea031697684736.png"
-													style="width:550px;height:226px" /></a></div>
+										<div class="banner_image_0"><a href="tel:1833-6943" target="_self"><img alt="banner" src="/PEG/banner/19/037d971094900437981483152c1e41f124e0ea031697684736.png" style="width:550px;height:226px"></a></div>
 									</div>
 								</div>
 							</div>
@@ -1105,9 +1041,7 @@
 										}
 									</style>
 									<div class="banner-wrap first" data-position="main8" data-type="fix" id="banner_20">
-										<div class="swiper-slide"><img alt="banner"
-												src="./PEG/banner/20/be1d7ca82256e7da71843be55d78445949ce86ca1694511077.png"
-												style="width:550px;height:384px" /></div>
+										<div class="banner_image_0"><img alt="banner" src="/PEG/banner/20/be1d7ca82256e7da71843be55d78445949ce86ca1694511077.png" style="width:550px;height:384px"></div>
 									</div>
 								</div>
 							</div>
@@ -1183,13 +1117,8 @@
 										}
 									</style>
 									<div class="banner-wrap first" data-position="main9" data-type="fix" id="banner_23">
-										<div class="swiper-slide"><img alt="banner"
-												src="./PEG/banner/23/d5797e3e7a6e7f8cf61f4e812036e4438276599f1697681766.png"
-												style="width:550px;height:226px" /></div>
-										<div class="swiper-slide"><a href="#none" target="_self"><img
-													alt="banner"
-													src="./PEG/banner/23/40b8e6ed3a98d73c468f93d6203e0b14a4713dda1697684753.png"
-													style="width:550px;height:226px" /></a></div>
+										<div class="banner_image_0"><img alt="banner" src="/PEG/banner/23/d5797e3e7a6e7f8cf61f4e812036e4438276599f1697681766.png" style="width:550px;height:226px"></div>
+										<div class="banner_image_1"><a href="tel:1668-0985" target="_self"><img alt="banner" src="/PEG/banner/23/40b8e6ed3a98d73c468f93d6203e0b14a4713dda1697684753.png" style="width:550px;height:226px"></a></div>
 									</div>
 								</div>
 							</div>
@@ -1276,7 +1205,7 @@
 									<map id="W_1641864875" name="W_1641864875">
 										<area coords="662,53,784,76" href="#none" onfocus="this.blur();" shape="rect" />
 										<area coords="855,53,940,76" href="#none" onfocus="this.blur();" shape="rect" />
-										<area coords="1010,53,1099,76" href="#none" onfocus="this.blur();" shape="rect" />
+										<area coords="1010,53,1099,76" href="/main/page.html" onfocus="this.blur();" shape="rect" />
 									</map>
 								</div>
 							</div>
