--- a/main/page.html
+++ b/main/page.html
@@ -45,7 +45,7 @@
             <div id="top_box">
 				<div id="top_frame">
 					<div class="logo">
-						<a href="#none" target="_self"><img src="../RAD/PEG/logo_16939059133345.png" alt="마리텔 로고" width="125" height="76" /></a>
+						<a href="/" target="_self"><img src="../RAD/PEG/logo_16939059133345.png" alt="마리텔 로고" width="125" height="76" /></a>
 					</div>
 				</div><!-- top_frame End -->
 			</div><!-- top_box End -->
