--- a/main/index.html
+++ b/main/index.html
@@ -55,7 +55,7 @@
 			<div id="top_box">
 				<div id="top_frame">
 					<div class="logo">
-						<a href="http://marital19.com/main/index.html" target="_self"><img src="http://marital19.com/RAD/PEG/logo_16939059133345.png" alt="마리텔 로고" width="125" height="76" /></a>
+						<a href="/main/index.html" target="_self"><img src="http://marital19.com/RAD/PEG/logo_16939059133345.png" alt="마리텔 로고" width="125" height="76" /></a>
 					</div>
 				</div><!-- top_frame End -->
 			</div><!-- top_box End -->
@@ -1982,9 +1982,7 @@
 				<div class="f_left_wrap">
 					<ul class="copyright">
 						<li>
-							<a href="http://marital19.com/main/index.html" target="_self"><img
-									src="http://marital19.com/RAD/PEG/logo_16964812760575.png"
-									alt="마리텔 로고" width="115" height="65" /></a>
+							<a href="/main/index.html" target="_self"><img src="/RAD/PEG/logo_16964812760575.png" alt="마리텔 로고" width="115" height="65" /></a>
 						</li>
 						<li>
 							<p style="color:#ddd;">(주)좋은친구</p>
