changed js location

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -26,25 +26,25 @@
         var domain = "http://marital19.com/m/";
     </script>
     <script src="http://marital19.com/m/scripts/prototype.js" type="text/javascript"></script>
-    <script src="/Libs/_js/require.js" type="text/javascript"></script>
+    <script src="/Libs/js/require.js" type="text/javascript"></script>
     <script type="text/javascript">
         // RequireJS 설정을 먼저 수행
         if (typeof require !== 'undefined' && require.config) {
             require.config({
                 baseUrl: '/Libs/_js',
                 paths: {
-                    'jssor/jssor.core': '/Libs/_js/jssor/jssor.core',
-                    'jssor/jssor.slider.min': '/Libs/_js/jssor/jssor.slider.min',
-                    'jssor/jssor.utils': '/Libs/_js/jssor/jssor.utils'
+                    'jssor/jssor.core': '/Libs/js/jssor/jssor.core',
+                    'jssor/jssor.slider.min': '/Libs/js/jssor/jssor.slider.min',
+                    'jssor/jssor.utils': '/Libs/js/jssor/jssor.utils'
                 }
             });
         }
     </script>
-    <script src="/Libs/_js/jquery.min.js" type="text/javascript"></script>
+    <script src="/Libs/js/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $J = jQuery.noConflict();
     </script>
-    <script src="/Libs/_js/rankup_common.js" type="text/javascript"></script>
+    <script src="/Libs/js/rankup_common.js" type="text/javascript"></script>
     <script src="http://marital19.com/m/scripts/common.js?v=033857" type="text/javascript"></script>
 </head>
 
@@ -255,7 +255,7 @@
                             <link href="/template/rankup_module/rankup_banner/banner.css" rel="stylesheet" type="text/css" />
                             <div class="banner-wrap first" id="banner_3">
                                 <div class="loading">
-                                    <img src="/Libs/_js/jssor/img/loader-bert.gif">
+                                    <img src="/Libs/js/jssor/img/loader-bert.gif">
                                     </img></div>
                                 <div class="banner-loading-overlay" u="loading">
                                     <div class="banner-loading-bg"></div>
