included menu.css

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -13,19 +13,19 @@
     <meta content="마리텔" property="og:title" />
     <meta content="혁신에 혁신을 다하다! 24시 무인성인용품 마리텔" property="og:description" />
     <meta content="http://marital19.com/og.jpg" property="og:image" />
-    <meta content="http://marital19.com/m/" property="og:url" />
-    <link href="http://marital19.com/m/" rel="canonical" />
+    <meta content="/m/" property="og:url" />
+    <link href="/m/" rel="canonical" />
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0,  target-densitydpi=medium-dpi" name="viewport">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
-    <link href="http://marital19.com/m/styles/common.css?v=033857" rel="stylesheet" type="text/css">
-    <link href="http://marital19.com/m/styles/shop.css" rel="stylesheet" type="text/css" />
-    <link href="http://marital19.com/m/styles/member.css" rel="stylesheet" type="text/css" />
+    <link href="/m/styles/common.css?v=033857" rel="stylesheet" type="text/css">
+    <link href="/m/styles/shop.css" rel="stylesheet" type="text/css" />
+    <link href="/m/styles/member.css" rel="stylesheet" type="text/css" />
     <link href="/m/styles/index.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
-        var domain = "http://marital19.com/m/";
+        var domain = "/m/";
     </script>
-    <script src="http://marital19.com/m/scripts/prototype.js" type="text/javascript"></script>
+    <script src="/m/scripts/prototype.js" type="text/javascript"></script>
     <script src="/Libs/js/require.js" type="text/javascript"></script>
     <script type="text/javascript">
         // RequireJS 설정을 먼저 수행
@@ -45,7 +45,7 @@
         $J = jQuery.noConflict();
     </script>
     <script src="/Libs/js/rankup_common.js" type="text/javascript"></script>
-    <script src="http://marital19.com/m/scripts/common.js?v=033857" type="text/javascript"></script>
+    <script src="/m/scripts/common.js?v=033857" type="text/javascript"></script>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
             });
             proc.process(function(trans) {
                 proc.response(trans)
-            }, false, 'http://marital19.com/m/design');
+            }, false, '/m/design');
         }
         Event.observe(window, 'load', function() {
             setTimeout(scrollTo, 0, 0, 0);
@@ -78,19 +78,19 @@
     <div class="main_r">
         <header class="main_header">
                     <!-- 2018-01-05 모바일 메뉴 publish:pej, add:lyj -->
-                    <link href="http://marital19.com/m/include/m_menu.css?v=1767206337" rel="stylesheet" type="text/css" />
+                    <link href="/m/include/m_menu.css?v=1767206337" rel="stylesheet" type="text/css" />
                     <div class="menu-wrap">
                         <div class="sub_header_wrap slide-bg">
                             <!--전체메뉴 상단 : 회원, 연락번호, 닫기버튼-->
                             <ul class="sub_header">
                                 <!--회원관련 메뉴 : 로그인, 회원가입, 회원정보수정-->
-                                <li><a href="http://marital19.com/m/etc/login.html" class="login-link">로그인</a>
+                                <li><a href="/m/etc/login.html" class="login-link">로그인</a>
                                 </li>
-                                <li><img alt="" src="http://marital19.com/m/images/menu/top_menu_line.png" /></li>
-                                <li><a href="http://marital19.com/m/member/join_intro.html">회원가입</a></li>
+                                <li><img alt="" src="/m/images/menu/top_menu_line.png" /></li>
+                                <li><a href="/m/member/join_intro.html">회원가입</a></li>
                             </ul>
-                            <div class="btn_close"><a class="close_btn" href="#"><img alt="닫기" src="http://marital19.com/m/images/menu/btn_close.png" /></a></div>
-                            <div class="customer"><img alt="" src="http://marital19.com/m/images/menu/btn_icon01.png" /><a href="tel:1833-6943"><span class="number">1833-6943</span></a></div>
+                            <div class="btn_close"><a class="close_btn" href="#"><img alt="닫기" src="/m/images/menu/btn_close.png" /></a></div>
+                            <div class="customer"><img alt="" src="/m/images/menu/btn_icon01.png" /><a href="tel:1833-6943"><span class="number">1833-6943</span></a></div>
                         </div>
                         <div class="gnb_wrap">
                             <!--메뉴-->
@@ -98,7 +98,7 @@
                                 <!--1차 메뉴-->
                                 <li>
                                     <a onclick="menu_handler(1)">회사소개</a>
-                                    <span class="gnb_arrow"><img alt="" src="http://marital19.com/m/images/menu/menu_arrow_open.png" /></span>
+                                    <span class="gnb_arrow"><img alt="" src="/m/images/menu/menu_arrow_open.png" /></span>
                                     <ul class="sub_gnb">
                                         <li><a onclick="menu_handler(13)">회사소개</a></li>
                                     </ul>
@@ -117,7 +117,7 @@
                                 </li>
                                 <li>
                                     <a onclick="menu_handler(54)">무인성인용품 마리텔 소개</a>
-                                    <span class="gnb_arrow"><img alt="" src="http://marital19.com/m/images/menu/menu_arrow_open.png" /></span>
+                                    <span class="gnb_arrow"><img alt="" src="/m/images/menu/menu_arrow_open.png" /></span>
                                     <ul class="sub_gnb">
                                         <li><a onclick="menu_handler(55)">마리텔 시스템</a></li>
                                     </ul>
@@ -127,7 +127,7 @@
                                 </li>
                                 <li>
                                     <a onclick="menu_handler(7)">매장소개</a>
-                                    <span class="gnb_arrow"><img alt="" src="http://marital19.com/m/images/menu/menu_arrow_open.png" /></span>
+                                    <span class="gnb_arrow"><img alt="" src="/m/images/menu/menu_arrow_open.png" /></span>
                                     <ul class="sub_gnb">
                                         <li><a onclick="menu_handler(9)">매장찾기</a></li>
                                     </ul>
@@ -137,7 +137,7 @@
                                 </li>
                                 <li>
                                     <a onclick="menu_handler(43)">창업안내</a>
-                                    <span class="gnb_arrow"><img alt="" src="http://marital19.com/m/images/menu/menu_arrow_open.png" /></span>
+                                    <span class="gnb_arrow"><img alt="" src="/m/images/menu/menu_arrow_open.png" /></span>
                                     <ul class="sub_gnb">
                                         <li><a onclick="menu_handler(44)">가맹절차</a></li>
                                     </ul>
@@ -150,7 +150,7 @@
                                 </li>
                                 <li>
                                     <a onclick="menu_handler(3)">커뮤니티</a>
-                                    <span class="gnb_arrow"><img alt="" src="http://marital19.com/m/images/menu/menu_arrow_open.png" /></span>
+                                    <span class="gnb_arrow"><img alt="" src="/m/images/menu/menu_arrow_open.png" /></span>
                                     <ul class="sub_gnb">
                                         <li><a onclick="menu_handler(27)">공지사항</a></li>
                                     </ul>
@@ -231,10 +231,10 @@
                     </script>
                     <div class="nav">
                         <!-- 2018-01-05 모바일 메뉴 lyj-->
-                        <a class="m-btn"><img alt="전체메뉴" src="http://marital19.com/m/images/menu/m_btn.png" /></a>
+                        <a class="m-btn"><img alt="전체메뉴" src="/m/images/menu/m_btn.png" /></a>
                         <center>
                             <p>
-                                <a href="http://marital19.com/m/" class="nav-logo"><img src="/m/design/top/logo.16957035364648.png" vspace="5" /></a> </p>
+                                <a href="/m/" class="nav-logo"><img src="/m/design/top/logo.16957035364648.png" vspace="5" /></a> </p>
                         </center>
                         <p class="rbtn"><a href="tel:1833-6943"><span>전화걸기</span></a></p>
                         <div class="nav-clear"></div>
@@ -474,11 +474,11 @@
     <div class="footer">
         <div class="footer_line">
             <div class="footer-center">
-                <a href="http://marital19.com/m/etc/agreement.html">이용약관</a><span class="line_pa">|</span>
-                <a href="http://marital19.com/m/etc/privacy.html">
+                <a href="/m/etc/agreement.html">이용약관</a><span class="line_pa">|</span>
+                <a href="/m/etc/privacy.html">
                     <font class="footer-link"><b>개인정보처리방침</b></font>
                 </a><span class="line_pa">|</span>
-                <a href="http://marital19.com/m/etc/email_reject.html">이메일주소 무단수집 거부</a>
+                <a href="/m/etc/email_reject.html">이메일주소 무단수집 거부</a>
             </div><!-- 하단 회원약관 링크 bar-->
         </div>
         <div class="footer-text">
@@ -490,8 +490,8 @@
         <ul class="ft">
         </ul>
         <ul class="ft">
-            <li><a href="http://marital19.com/m/"><span>홈</span></a></li>
-            <li><a href="http://marital19.com/m/pc_index.html" target="_blank"><span>PC버전</span></a></li>
+            <li><a href="/m/"><span>홈</span></a></li>
+            <li><a href="/m/pc_index.html" target="_blank"><span>PC버전</span></a></li>
             <li><a onclick="window.scrollTo(0,0)"><span>TOP</span></a></li>
         </ul>
     </div>
